--- a/packages/live-streaming/frontend/index.html
+++ b/packages/live-streaming/frontend/index.html
@@ -17,6 +17,7 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/iframeResizer.contentWindow.min.js"></script>
     <script type="module" src="/src/index.tsx"></script>
 </body>
 
