--- a/packages/collaborative-learning/frontend/index.html
+++ b/packages/collaborative-learning/frontend/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Online tra</title>
+    <title>Collaborative learning demo</title>
 </head>
 
 <body>
