refactor: improve header layout and fix mobile/desktop scrolling issues
- Make header sticky and fixed at top
- Remove overflow hidden constraints causing scroll issues
- Move toolbar to sticky bottom position
- Fix fullscreen editor layout and z-index stacking
- Adjust mobile and desktop viewport behavior
- Clean up grid layout structure in header
- Ensure proper height and scroll behavior across views

This commit makes sure that our layout works with retracting navigation bar and active keyboards on mobile

--- a/packages/social-media-app/frontend/index.html
+++ b/packages/social-media-app/frontend/index.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="icon" href="/favicon.ico" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, interactive-widget=resizes-content"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Create freely" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -103,7 +100,7 @@
 
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root" class="flex flex-col h-full"></div>
+        <div id="root" class="flex flex-col h-full min-h-fit"></div>
         <script type="module" src="/src/index.tsx"></script>
     </body>
 </html>
