--- a/packages/social-media-app/frontend/index.html
+++ b/packages/social-media-app/frontend/index.html
@@ -3,10 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="viewport-fit=cover" />
-
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Create freely" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
