--- a/packages/social-media-app/frontend/index.html
+++ b/packages/social-media-app/frontend/index.html
@@ -43,7 +43,7 @@
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-full min-h-fit"></div>
+    <div id="root" class="min-h-fit"></div>
     <script type="module" src="/src/index.tsx"></script>
 </body>
 
