--- a/packages/social-media-app/frontend/index.html
+++ b/packages/social-media-app/frontend/index.html
@@ -9,6 +9,11 @@
     <meta name="description" content="Create freely" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <!-- BOOTSTRAP_PREFETCH_START -->
+<!-- (auto-generated; do not edit by hand) -->
+<link rel="dns-prefetch" href="//c111240765c52526ebd787f2bd3901246fdc0d02.peerchecker.com">
+<link rel="preconnect" href="https://c111240765c52526ebd787f2bd3901246fdc0d02.peerchecker.com:4003" crossorigin>
+<!-- BOOTSTRAP_PREFETCH_END -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
